--- a/src/tic_tac_toe_game_frontend/assets/main.css
+++ b/src/tic_tac_toe_game_frontend/assets/main.css
@@ -1,37 +1,115 @@
-body {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
+
+*{
+    margin: 0px;
+    padding: 0px;
 }
 
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
+nav{
+    background-color: black;
+    color: white;
+    height: 45px;
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
 }
 
-form {
+nav ul{
+    list-style-type: none;
+}
+
+nav ul li{
+    float: left;
+    margin: 7px 20px;
+
+}
+
+.gameContainer{
     display: flex;
     justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
+    margin-top: 20px;
 }
 
-button[type="submit"] {
+.container{
+    display: grid;
+    grid-template-columns: repeat(3,10vw);
+    grid-template-rows: repeat(3,10vw);
+    font-family: 'Roboto', sans-serif;
+}
+
+.box{
+    border: 2px solid black;
+    place-items: center;
+    font-size: 8vw;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+.container div:hover{
+    background-color: rgb(220, 196, 243);
+}
+
+.gameinfo{
+    margin-left: 20px;
+    font-family: 'Baloo Bhaina 2', cursive;
+    font-size: 20px
+}
+
+.imgbox img{
+    width: 0;
+    transition: width .1s ease-in-out;
+}
+
+.br-0{
+    border-right: 0;
+}
+
+.bl-0{
+    border-left: 0;
+}
+
+.bb-0{
+    border-bottom: 0;
+}
+
+.bt-0{
+    border-top: 0;
+}
+
+.gameinfo span{
+    color: rgb(240, 80, 6);
+    border: 3px solid black;
+    border-radius: 9px;
     padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
+    margin-left: 40px;
 }
 
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
+.gameinfo button{
+    padding: 13px 20px;
+    border-radius: 9px;
+    background-color: black;
+    color: whitesmoke;
 }
 
-#greeting:empty {
-    display: none;
+.gameinfo h1{
+    margin: 20px 5px;
+    padding: 50px ;
+    font-size: 3vw;
+}
+
+@media screen and (max-width: 900px) {
+    .gameContainer{
+        flex-wrap: wrap;
+    }
+    .gameinfo h1{
+        font-size: 1.5rem;
+        margin-top: 0;
+    }
+    .container{
+        grid-template-columns: repeat(3,20vw);
+        grid-template-rows: repeat(3,20vw);
+    }
 }
